<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_not"
            android:icon="@drawable/dialogue"
            android:title="@string/menu_noti" />
        <item
            android:id="@+id/nav_send"
            android:icon="@drawable/send"
            android:title="@string/menu_sender" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/account"
            android:title="@string/menu_profile" />
        <item
            android:id="@+id/nav_add_student"
            android:icon="@drawable/add"
            android:title="@string/menu_addstudent" />
        <item
            android:id="@+id/nav_add_teacher"
            android:icon="@drawable/ass"
            android:title="@string/menu_addteacher" />
        <item
            android:id="@+id/nav_attendance"
            android:icon="@drawable/correct"
            android:title="@string/menu_attedance" />
        <item
            android:id="@+id/nav_attendancereport"
            android:icon="@drawable/checklist"
            android:title="@string/menu_attandancereport" />
        <item
            android:id="@+id/nav_detailstudent"
            android:icon="@drawable/document"
            android:title="@string/menu_detailstudent" />
        <item
            android:id="@+id/nav_detailteacher"
            android:icon="@drawable/form"
            android:title="@string/menu_detailteacher" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/logout"
            android:title="@string/menu_Logout" />
    </group>
</menu>
