<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <TextView
        android:id="@+id/usertype"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/usertypw_teacher"
        android:textAlignment="textEnd"
        android:textColor="@color/grey"
        android:textSize="12dp" />

    <ImageButton
        android:id="@+id/profileimage"
        android:layout_width="match_parent"
        android:layout_height="290dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_weight="1"
        android:adjustViewBounds="true"
        android:backgroundTint="@color/white"
        android:contentDescription="@string/profile_pic"
        android:scaleType="fitCenter"
        android:src="@drawable/user"
        android:textAlignment="center" />
    <TableLayout
        android:id="@+id/tableLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TableRow>
            <TextView
                android:layout_width="138dp"
                android:paddingEnd="20sp"
                android:text="@string/fullname"
                android:textAlignment="textEnd"
                android:textColor="#000000" />
            <TextView
                android:id="@+id/full_name"
                android:layout_width="wrap_content"
                android:text="------------------"
                android:textAlignment="textStart"
                android:textColor="#000000" />
        </TableRow>
        <TableRow>
        <TextView
            android:layout_width="138dp"
            android:paddingEnd="20sp"
            android:text="Course:"
            android:textAlignment="textEnd"
            android:textColor="#000000" />

        <TextView
            android:id="@+id/showcource"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="------------"
            android:textAlignment="textStart"
            android:textColor="#000000" />
        </TableRow>
        <TableRow>

            <TextView
                android:layout_width="138dp"
                android:paddingEnd="20sp"
                android:text="Degree:"
                android:textAlignment="textEnd"
                android:textColor="#000000"
                android:id="@+id/showdegreet"/>
            <TextView
                android:id="@+id/showdegree"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="-----,-----"
                android:textAlignment="textStart"
                android:textColor="#000000" />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="138dp"
                android:paddingEnd="20sp"
                android:text="BirthDate:"
                android:textAlignment="textEnd"
                android:textColor="#000000" />

            <TextView
                android:id="@+id/Birthofdate"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="--/--/----"
                android:textColor="#000000" />
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/divt"
                android:layout_width="138dp"
                android:paddingEnd="20sp"
                android:text="@string/division"
                android:textAlignment="textEnd"
                android:textColor="#000000" />

            <TextView
                android:id="@+id/div"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="-"
                android:textAlignment="textStart"
                android:textColor="#000000" />
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/rollt"
                android:layout_width="138dp"
                android:paddingEnd="20sp"
                android:text="@string/rollnumber"
                android:textAlignment="textEnd"
                android:textColor="#000000" />

            <TextView
                android:id="@+id/rollnumber"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="---"
                android:textColor="#000000" />
        </TableRow>

        <TableRow>

            <TextView
                android:paddingEnd="20sp"
                android:text="@string/phone_number"
                android:textAlignment="textEnd"
                android:textColor="#000000" />

            <TextView
                android:id="@+id/Contact"
                android:layout_width="wrap_content"
                android:text="+91 ----------"
                android:textAlignment="textStart"
                android:textColor="#000000" />
        </TableRow>

        <TableRow>

            <TextView
                android:paddingEnd="20sp"
                android:text="@string/email"
                android:textAlignment="textEnd"
                android:textColor="#000000" />

            <TextView
                android:id="@+id/mail"
                android:layout_width="wrap_content"
                android:text="@string/adminerror_210_com"
                android:textAlignment="textStart"
                android:textColor="#000000" />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="155dp"
                android:paddingEnd="20sp"
                android:text="@string/uid"
                android:textAlignment="textEnd"
                android:textColor="#000000" />

            <TextView
                android:id="@+id/uid"
                android:layout_width="wrap_content"
                android:text="@string/_941264536383012"
                android:textAlignment="textStart"
                android:textColor="#000000" />
        </TableRow>

        <TableRow>

            <TextView
                android:paddingEnd="20sp"
                android:text="@string/address"
                android:textAlignment="textEnd"
                android:textColor="#000000" />

            <TextView
                android:id="@+id/address"
                android:layout_width="120dp"
                android:layout_height="72dp"
                android:maxLines="3"
                android:text="----------------------\n---------------\n--------"
                android:textAlignment="textStart"
                android:textColor="#000000" />
        </TableRow>
    </TableLayout>

    <ProgressBar
        android:id="@+id/profilepb"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="8dp"
        android:theme="@style/AppTheme.WhiteAccent"/>
</LinearLayout>