<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TableRow
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp">
            <LinearLayout
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cource"
                    android:textColor="@color/black"
                    android:layout_margin="0dp"
                    android:textSize="13dp"
                    android:paddingStart="10dp"/>
                <Spinner
                    android:layout_margin="0dp"
                    android:id="@+id/detailcource"
                    style="@style/spinnerItemStyle"
                    android:layout_width="174dp"
                    android:layout_height="50dp"
                    android:background="@drawable/spinner_bg"
                    android:dropDownWidth="160dp"
                    android:dropDownVerticalOffset="?attr/dropdownListPreferredItemHeight"
                    android:paddingRight="14dp"
                    android:popupBackground="@android:color/white"
                    android:popupElevation="3dp"
                    android:stateListAnimator="@drawable/spinner_sla" />
            </LinearLayout>
            <LinearLayout
                android:orientation="vertical"
                android:layout_marginStart="5dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/year"
                    android:textColor="@color/black"
                    android:layout_margin="0dp"
                    android:textSize="13dp"
                    android:paddingStart="10dp"/>
                <Spinner
                    android:layout_margin="0dp"
                    android:id="@+id/detailyear"
                    style="@style/spinnerItemStyle"
                    android:layout_width="191dp"
                    android:layout_height="50dp"
                    android:background="@drawable/spinner_bg"
                    android:dropDownWidth="180dp"
                    android:dropDownVerticalOffset="?attr/dropdownListPreferredItemHeight"
                    android:paddingRight="14dp"
                    android:popupBackground="@android:color/white"
                    android:popupElevation="3dp"
                    android:stateListAnimator="@drawable/spinner_sla" />
            </LinearLayout>
        </TableRow>
        <TableRow
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp">
            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="174dp"
                android:layout_height="55dp"
                android:hint="@string/rollnumber"
                app:hintTextColor="#000"
                android:textColorHint="#000"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:boxStrokeColor="#000">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/detailrollnumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="#242424"
                    android:textColor="@color/black"
                    android:inputType="number"
                    android:maxLength="3" />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="193dp"
                android:layout_height="55dp"
                android:hint="@string/division"
                app:hintTextColor="#000"
                android:textColorHint="#000"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:boxStrokeColor="#000"
                android:layout_marginStart="5dp">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/detaildivison"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="#242424"
                    android:textColor="@color/black"
                    android:inputType="text"
                    android:maxLength="1" />
            </com.google.android.material.textfield.TextInputLayout>
        </TableRow>
        <Button
            android:id="@+id/detailshow"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/show"
            android:backgroundTint="#1134af"
            android:textColor="#fff"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"/>
    </TableLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:background="#0052c5">
    </View>
    <ImageView
        android:id="@+id/detailprofile"
        android:layout_width="match_parent"
        android:layout_height="280dp"
        android:layout_marginLeft="75dp"
        android:layout_marginRight="75dp"
        android:layout_weight="1"
        android:adjustViewBounds="true"
        android:contentDescription="@string/profile_pic"
        android:scaleType="fitCenter"
        android:src="@drawable/face"
        android:background="@color/grey"/>
    <TableLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent">
        <TableRow>
            <TextView
                android:layout_width="139dp"
                android:text="@string/fullname"
                android:textAlignment="textEnd"
                android:textColor="#000"
                android:textSize="15dp"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/detailfull_name"
                android:layout_width="144dp"
                android:text="-------- ------"
                android:textAlignment="textStart"
                android:paddingLeft="12dp"
                android:textColor="#000000" />
        </TableRow>
        <TableRow>
            <TextView
                android:layout_width="139dp"
                android:text="@string/birth_date"
                android:textAlignment="textEnd"
                android:textColor="#000"
                android:textSize="15dp"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/detailBirthofdate"
                android:layout_width="144dp"
                android:textAlignment="textStart"
                android:paddingLeft="12dp"
                android:text="--/--/----"
                android:textColor="#000000" />
        </TableRow>
        <TableRow>
            <TextView
                android:layout_width="139dp"
                android:text="@string/cource"
                android:textAlignment="textEnd"
                android:textColor="#000"
                android:textSize="15dp"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/detailshowcource"
                android:layout_width="144dp"
                android:textAlignment="textStart"
                android:paddingLeft="12dp"
                android:text="-----"
                android:textColor="#000000" />
        </TableRow>
        <TableRow>
            <TextView
                android:layout_width="139dp"
                android:text="@string/division"
                android:textAlignment="textEnd"
                android:textColor="#000"
                android:textSize="15dp"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/divisionstudent"
                android:layout_width="144dp"
                android:text="------"
                android:textAlignment="textStart"
                android:paddingLeft="12dp"
                android:textColor="#000000" />
        </TableRow>
        <TableRow>
            <TextView
                android:layout_width="139dp"
                android:text="@string/rollnumber"
                android:textAlignment="textEnd"
                android:textColor="#000"
                android:textSize="15dp"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/detailroll"
                android:text="---"
                android:layout_width="144dp"
                android:textAlignment="textStart"
                android:paddingLeft="12dp"
                android:textColor="#000000" />
        </TableRow>
        <TableRow>
            <TextView
                android:layout_width="139dp"
                android:text="@string/uid"
                android:textAlignment="textEnd"
                android:textColor="#000"
                android:textSize="15dp"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/uidstudent"
                android:layout_width="144dp"
                android:textAlignment="textStart"
                android:paddingLeft="12dp"
                android:textColor="#000000"
                android:text="------------"/>
        </TableRow>
        <TableRow>
            <TextView
                android:layout_width="139dp"
                android:text="@string/email"
                android:textAlignment="textEnd"
                android:textColor="#000"
                android:textSize="15dp"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/detailmail"
                android:layout_width="144dp"
                android:textAlignment="textStart"
                android:paddingLeft="12dp"
                android:text="--------------"
                android:textColor="#000000" />
        </TableRow>
        <TableRow>
            <TextView
                android:layout_width="139dp"
                android:text="@string/phone_number"
                android:textAlignment="textEnd"
                android:textColor="#000"
                android:textSize="15dp"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/detailContact"
                android:layout_width="144dp"
                android:textAlignment="textStart"
                android:paddingLeft="12dp"
                android:textColor="#000000"
                android:text="+91 ----------"/>
        </TableRow>
        <TableRow>
            <TextView
                android:layout_width="139dp"
                android:text="@string/address"
                android:textAlignment="textEnd"
                android:textColor="#000"
                android:textSize="15dp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/detailaddress"
                android:layout_width="268dp"
                android:layout_height="43dp"
                android:paddingLeft="12dp"
                android:textAlignment="textStart"
                android:textColor="#000000"
                android:text="---------------\n---------\n-----"/>
        </TableRow>
    </TableLayout>
    <ProgressBar
        android:id="@+id/progressdetail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.WhiteAccent"/>
</LinearLayout>