<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">
    <TableLayout
        android:id="@+id/tableLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <TableRow
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp">
            <LinearLayout
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cource"
                    android:textColor="@color/black"
                    android:layout_margin="0dp"
                    android:textSize="13dp"
                    android:paddingStart="10dp"/>
                <Spinner
                    android:layout_margin="0dp"
                    android:id="@+id/studentcourse"
                    style="@style/spinnerItemStyle"
                    android:layout_width="174dp"
                    android:layout_height="50dp"
                    android:background="@drawable/spinner_bg"
                    android:dropDownWidth="160dp"
                    android:dropDownVerticalOffset="?attr/dropdownListPreferredItemHeight"
                    android:paddingRight="14dp"
                    android:popupBackground="@android:color/white"
                    android:popupElevation="3dp"
                    android:stateListAnimator="@drawable/spinner_sla" />
            </LinearLayout>
            <LinearLayout
                android:orientation="vertical"
                android:layout_marginStart="5dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/year"
                    android:textColor="@color/black"
                    android:layout_margin="0dp"
                    android:textSize="13dp"
                    android:paddingStart="10dp"/>
                <Spinner
                    android:layout_margin="0dp"
                    android:id="@+id/studentyear"
                    style="@style/spinnerItemStyle"
                    android:layout_width="191dp"
                    android:layout_height="50dp"
                    android:background="@drawable/spinner_bg"
                    android:dropDownWidth="180dp"
                    android:dropDownVerticalOffset="?attr/dropdownListPreferredItemHeight"
                    android:paddingRight="14dp"
                    android:popupBackground="@android:color/white"
                    android:popupElevation="3dp"
                    android:stateListAnimator="@drawable/spinner_sla" />
            </LinearLayout>
        </TableRow>
        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:hint="@string/subject"
            app:hintTextColor="#000"
            android:textColorHint="#000"
            app:boxStrokeColor="#000"
            android:paddingStart="25dp"
            android:paddingEnd="25dp"
            app:endIconMode="clear_text"
            app:endIconTint="#000">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/subject"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="#242424"
                android:inputType="text"
                android:textColor="@color/black"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="450dp"
            android:hint="@string/message1"
            app:hintTextColor="#000"
            android:textColorHint="#000"
            app:boxStrokeColor="#000"
            android:paddingStart="25dp"
            android:paddingEnd="25dp"
            app:endIconMode="clear_text"
            app:endIconTint="#000">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/message"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColorHint="#242424"
                android:inputType="textMultiLine"
                android:textColor="@color/black"
                android:gravity="top" />
        </com.google.android.material.textfield.TextInputLayout>
    </TableLayout>
    <Button
        android:id="@+id/send"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/send"
        android:backgroundTint="#1134af"
        android:textColor="#fff"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:layout_marginTop="15dp"/>
    <ProgressBar
        android:id="@+id/sendprogressbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:theme="@style/AppTheme.WhiteAccent"/>
</LinearLayout>